--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run build:script && next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "build:script": "craco build && copyfiles build/static/js/youtube-plus.js public -f"
   },
   "dependencies": {
     "next": "10.1.2",
@@ -14,6 +15,23 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "@craco/craco": "^6.1.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "copyfiles": "^2.4.1",
+    "prettier": "^2.2.1",
+    "react-scripts": "^4.0.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
