--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/react-dom": "^17.0.3",
     "copyfiles": "^2.4.1",
     "prettier": "^2.2.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.3"
   },
   "browserslist": {
     "production": [
