--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
     "build:script": "craco build && copyfiles build/static/js/youtube-plus.js public -f",
     "dev:script": "craco start"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@craco/craco": "^6.1.1",
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
     "@fontsource/inter": "^4.2.2",
+    "@iconify/icons-heroicons-outline": "^1.1.1",
+    "@iconify/icons-heroicons-solid": "^1.1.0",
     "@material-ui/core": "^5.0.0-alpha.28",
+    "@next/eslint-plugin-next": "^10.1.3",
+    "@types/cors": "^2.8.10",
+    "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@typescript-eslint/parser": "^4.20.0",
     "axios": "^0.21.1",
+    "babel-plugin-macros": "^3.0.1",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.5",
@@ -24,28 +35,15 @@
     "mongoose": "^5.12.3",
     "next": "10.1.2",
     "notistack": "^1.0.6-alpha.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-library": "git+https://majapi-meerkat:dLA1JDGcmtmS_CMp4fxB@gitlab.com/italodeandra/react-library.git",
+    "react-library": "https://majapi-meerkat:dLA1JDGcmtmS_CMp4fxB@gitlab.com/italodeandra/react-library.git",
     "react-query": "^3.13.4",
-    "react-use": "^17.2.1",
-    "valtio": "^1.0.1"
-  },
-  "devDependencies": {
-    "@craco/craco": "^6.1.1",
-    "@iconify/icons-heroicons-outline": "^1.1.1",
-    "@iconify/icons-heroicons-solid": "^1.1.0",
-    "@next/eslint-plugin-next": "^10.1.3",
-    "@types/cors": "^2.8.10",
-    "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/parser": "^4.20.0",
-    "babel-plugin-macros": "^3.0.1",
-    "copyfiles": "^2.4.1",
-    "prettier": "^2.2.1",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.2.3"
+    "react-use": "^17.2.1",
+    "typescript": "^4.2.3",
+    "valtio": "^1.0.1"
   },
   "browserslist": {
     "production": [
