--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "test": "jest",
     "build:script": "craco build && copyfiles build/static/js/youtube-plus.js public -f",
-    "dev:script": "craco start"
+    "dev:script": "craco start",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.{js,ts,tsx,css,md}": "prettier --write"
   },
   "devDependencies": {
     "@craco/craco": "^6.1.1",
@@ -29,6 +34,8 @@
     "babel-plugin-macros": "^3.0.1",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
+    "eslint": "^7.23.0",
+    "husky": "^6.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.5",
     "mongodb-memory-server": "^6.9.6",
