--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/core": "^5.0.0-alpha.28",
     "@next/eslint-plugin-next": "^10.1.3",
     "@types/cors": "^2.8.10",
+    "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
