--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/inter": "^4.2.2",
     "@iconify/icons-heroicons-outline": "^1.1.1",
     "@iconify/icons-heroicons-solid": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "@material-ui/core": "^5.0.0-alpha.28",
     "@next/eslint-plugin-next": "^10.1.3",
     "@types/cors": "^2.8.10",
@@ -46,7 +47,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-library": "https://majapi-meerkat:dLA1JDGcmtmS_CMp4fxB@gitlab.com/italodeandra/react-library.git",
+    "react-library": "git+https://majapi-meerkat:dLA1JDGcmtmS_CMp4fxB@gitlab.com/italodeandra/react-library.git",
     "react-query": "^3.13.4",
     "react-scripts": "^4.0.3",
     "react-use": "^17.2.1",
