--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-library": "git+https://majapi-meerkat:dLA1JDGcmtmS_CMp4fxB@gitlab.com/italodeandra/react-library.git",
+    "react-library": "github:italodeandra/react-library",
     "react-query": "^3.13.4",
     "react-scripts": "^4.0.3",
     "react-use": "^17.2.1",
