--- a/package.json
+++ b/package.json
@@ -15,16 +15,28 @@
     "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.{js,ts,tsx,css,md}": "prettier --write"
   },
-  "devDependencies": {
-    "@craco/craco": "^6.1.1",
+  "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
     "@fontsource/inter": "^4.2.2",
+    "@material-ui/core": "^5.0.0-alpha.29",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "mongoose": "^5.12.3",
+    "next": "^10.1.2",
+    "notistack": "^1.0.6-alpha.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-library": "github:italodeandra/react-library",
+    "react-query": "^3.13.4",
+    "valtio": "^1.0.1"
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.1.1",
     "@iconify/icons-heroicons-outline": "^1.1.1",
     "@iconify/icons-heroicons-solid": "^1.1.0",
     "@iconify/react": "^1.1.4",
-    "@material-ui/core": "^5.0.0-alpha.28",
     "@next/eslint-plugin-next": "^10.1.3",
     "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.22",
@@ -32,27 +44,14 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/parser": "^4.20.0",
-    "axios": "^0.21.1",
-    "babel-plugin-macros": "^3.0.1",
     "copyfiles": "^2.4.1",
-    "cors": "^2.8.5",
     "eslint": "^7.23.0",
     "husky": "^6.0.0",
-    "lodash": "^4.17.21",
-    "mongodb": "^3.6.5",
     "mongodb-memory-server": "^6.9.6",
-    "mongoose": "^5.12.3",
-    "next": "10.1.2",
-    "notistack": "^1.0.6-alpha.0",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-library": "github:italodeandra/react-library",
-    "react-query": "^3.13.4",
     "react-scripts": "^4.0.3",
     "react-use": "^17.2.1",
-    "typescript": "^4.2.3",
-    "valtio": "^1.0.1"
+    "typescript": "^4.2.3"
   },
   "browserslist": {
     "production": [
