--- a/.github/workflows/caprover.yml
+++ b/.github/workflows/caprover.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: AlexxNB/caprover-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           server: 'https://captain.majapi.com'
           password: '${{ secrets.CAPROVER_PASSWORD }}'
