--- a/.yalc/@italodeandra/next/.eslintrc.json
+++ b/.yalc/@italodeandra/next/.eslintrc.json
@@ -2,14 +2,27 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "next/typescript"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "root": true,
   "rules": {
-    "react/jsx-curly-brace-presence": ["error"],
-    "prefer-const": 0,
-    "no-console": ["error", { "allow": ["warn", "error", "info"] }]
+    "react/jsx-curly-brace-presence": [
+      "error"
+    ],
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error",
+          "info"
+        ]
+      }
+    ]
   }
 }
