--- a/.yalc/@italodeandra/next/package.json
+++ b/.yalc/@italodeandra/next/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@italodeandra/next",
   "version": "2.0.0",
-  "yalcSig": "e6e3d59db0f70dab09e13e23c5fa4a89"
+  "type": "module",
+  "yalcSig": "e5829427995b1d7487897e51cd9677b4"
 }
