--- a/package.json
+++ b/package.json
@@ -2,30 +2,33 @@
   "name": "youtube-plus",
   "version": "2.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "yalc-update": "shx rm -rf .next && yalc update"
   },
   "dependencies": {
     "@italodeandra/next": "file:.yalc/@italodeandra/next",
-    "axios": "^1.6.7",
-    "lodash": "^4.17.21",
-    "mongodb-memory-server": "^9.1.6",
-    "next": "^14.1.0",
-    "papr": "^15.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "valtio": "^1.13.0"
+    "lodash-es": "^4.17.21",
+    "mongodb-memory-server": "^10.1.3",
+    "next": "^15.1.3",
+    "papr": "^15.2.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "typescript": "^5.3.3"
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "prettier": "^3.4.2",
+    "shx": "^0.3.4",
+    "typescript": "^5.7.2"
   }
 }
