--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
     "yalc-update": "shx rm -rf .next && yalc update"
   },
   "dependencies": {
-    "@italodeandra/next": "file:.yalc/@italodeandra/next",
+    "@majapisoftwares/next": "^2.1.0",
     "lodash-es": "^4.17.21",
-    "mongodb-memory-server": "^10.1.3",
-    "next": "^15.1.3",
+    "mongodb-memory-server": "^10.1.4",
+    "next": "^15.3.5",
     "papr": "^15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
-    "prettier": "^3.4.2",
-    "shx": "^0.3.4",
-    "typescript": "^5.7.2"
+    "@types/node": "^22.16.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "^15.3.5",
+    "prettier": "^3.6.2",
+    "shx": "^0.4.0",
+    "typescript": "^5.8.3"
   }
 }
